# bridgehook

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  REVERT.md  biome.json  browser-bridge-relay-evolution.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-server.js
.github/workflows/: ci.yml  deploy-pages.yml  deploy-relay.yml  release-desktop.yml
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: bridge.rs  crypto.rs  db.rs  lib.rs  main.rs  models.rs  services.rs  state.rs  tray.rs
apps/desktop/src-tauri/src/commands/: events.rs  mod.rs  services.rs
apps/desktop/src/components/: AddServiceForm.tsx  CommandPalette.tsx  (+14 more)
apps/extension/: background.js  manifest.json  package.json  popup.html  popup.js
apps/web/: .env.example  index.html  package.json  tailwind.config.js
apps/web/public/: _headers  _redirects
apps/web/src/: App.tsx  index.css
docs/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/src/: App.tsx  index.css  main.tsx
docs/src/components/: FlowDiagram.tsx  Illustrations.tsx  Layout.tsx
docs/src/pages/: Architecture.tsx  Auth.tsx  Billing.tsx  BrowserBridge.tsx  ChannelSecrets.tsx  Comparison.tsx  DevicePairing.tsx  HowItWorks.tsx  Introduction.tsx  PathAllowlist.tsx  Quickstart.tsx  RelayAPI.tsx  Replay.tsx  SSEEvents.tsx  SSETechnology.tsx  SecurityModel.tsx  SelfHosting.tsx
relay/: drizzle.config.ts  package.json  tsconfig.json  wrangler.toml
relay/drizzle/: 0001_dual_auth.sql  0002_better_auth.sql  0003_devices.sql  0004_channels_ownership.sql  0005_events_observability.sql  0006_billing.sql  0007_claim_arbitration.sql  0008_drop_bearer.sql
relay/src/: access.ts  auth.ts  billing.ts  channel-do.ts  email.ts  identity.ts  index.ts  password.ts  time.ts  user-do.ts
relay/src/routes/: auth-device.ts  billing.ts  me-devices.ts  me.ts
(+56 files in other folders)
